kubernetes/debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug 
spec:
  serviceAccountName: accessos
  containers:
  - image: ubuntu
    command:
      - "sleep"
      - "604800"
    imagePullPolicy: IfNotPresent
    name: ubuntu
  restartPolicy: Always
