kubernetes/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: worker
  name: worker
spec:
  replicas: 5
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      serviceAccountName: accessos
      imagePullSecrets:
        - name: regcred
      containers:
        - name: worker
          image: accessos/worker:06e3c21df
          resources:
            limits:
              memory: 3000M
              cpu: "3"
            requests:
              cpu: 1000m
              memory: 3000M
          imagePullPolicy: Always
