kubernetes/accessos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: accessos
  name: accessos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accessos
  template:
    metadata:
      labels:
        app: accessos
    spec:
      serviceAccountName: accessos
      imagePullSecrets:
        - name: regcred
      containers:
        - name: accessos
          image: accessos/access:713892c0c
          resources:
            limits:
              memory: 2048M
              cpu: "1"
            requests:
              cpu: 400m
              memory: 1024M
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: accessos
  name: accessos
spec:
  type: NodePort
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app: accessos
