kubernetes/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: admin
  name: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      serviceAccountName: accessos
      imagePullSecrets:
        - name: regcred
      containers:
        - name: admin
          image: accessos/admin:835c84b83
          resources:
            limits:
              memory: 4096M
              cpu: "1"
            requests:
              cpu: 400m
              memory: 4096M
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: admin
  name: admin
spec:
  type: NodePort
  ports:
    - name: "4001"
      port: 4001
      targetPort: 4001
  selector:
    app: admin
