kubernetes/chrome.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  labels:
    app: chrome 
  name: chrome 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chrome 
  template:
    metadata:
      labels:
        app: chrome 
    spec:
      serviceAccountName: accessos
      containers:
      - name: chrome 
        image: browserless/chrome:1-chrome-stable
        resources:
          limits:
            memory: 4096M 
            cpu: "2"
          requests:
            cpu: 400m 
            memory: 1024M
        imagePullPolicy: Always
        ports:
        - containerPort: 3000 
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chrome
  name: chrome
spec:
  type: ClusterIP
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    app: chrome
