kubernetes/scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: scheduler 
  name: scheduler 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler 
  template:
    metadata:
      labels:
        app: scheduler 
    spec:
      serviceAccountName: accessos
      imagePullSecrets:
        - name: regcred
      containers:
        - name: scheduler 
          image: accessos/scheduler:a21822a03
          resources:
            limits:
              memory: 2048M
              cpu: "2"
            requests:
              cpu: 1000m
              memory: 1024M
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: scheduler 
  name: scheduler 
spec:
  type: ClusterIP 
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    app: scheduler
