kubernetes/ingress.template.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accessos-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-production"
spec:
  tls:
    - secretName: accessos-tls-secrets
      hosts:
        # This should be the same value as the domain secret you defined in ./accessos-secrets.yaml
        - "{YOUR-DOMAIN-HERE}"
  rules:
    - host: eks.accessos.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: accessos
                port:
                  number: 3000
